[gd_scene load_steps=11 format=3 uid="uid://cprjjm5h4ekcu"]

[ext_resource type="Script" path="res://Scenes/game.gd" id="1_m7lfg"]
[ext_resource type="Texture2D" uid="uid://brin51inge757" path="res://Assets/17520.webp" id="2_kl1qn"]
[ext_resource type="Texture2D" uid="uid://wa4tu1dh5pio" path="res://Assets/Crops/Wheat/Updated Wheat Unclicked.png" id="3_j73ll"]
[ext_resource type="Script" path="res://Scenes/counter.gd" id="3_uxv5b"]
[ext_resource type="Texture2D" uid="uid://bt0ettrnkr6km" path="res://Assets/Crops/Wheat/Updated Wheat Clicked.png" id="4_go8a0"]
[ext_resource type="Texture2D" uid="uid://b0h0tr3d2biq2" path="res://Assets/Crops/Carrot/Updated Carrot Unclicked.png" id="5_qb76j"]
[ext_resource type="Texture2D" uid="uid://c67rb26mvyre" path="res://Assets/Crops/Carrot/Updated Carrot Clicked.png" id="6_ahk0q"]
[ext_resource type="Texture2D" uid="uid://bkjdhd1u2i3el" path="res://Assets/Updated Locked Button.png" id="7_8fumg"]
[ext_resource type="Texture2D" uid="uid://d0c6eqx33ixas" path="res://Assets/Crops/Beet/Beet Button Unclicked.png" id="8_ry3h1"]
[ext_resource type="Texture2D" uid="uid://bjh4n7jxxna6v" path="res://Assets/Crops/Beet/Beet Button Clicked.png" id="9_eimd4"]

[node name="game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m7lfg")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1157.0
offset_bottom = 656.0
texture = ExtResource("2_kl1qn")
expand_mode = 1

[node name="Cropsbg" type="ColorRect" parent="."]
layout_mode = 2
offset_left = 25.0
offset_top = 65.0
offset_right = 565.0
offset_bottom = 630.0
color = Color(0.141176, 0.156863, 0.243137, 0.756863)

[node name="Crops" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = 70.0
offset_right = -587.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2

[node name="CropsLable" type="Label" parent="Crops"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Crops"
horizontal_alignment = 1

[node name="CropsMenu" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(530, 500)
layout_mode = 0
offset_left = 25.0
offset_top = 120.0
offset_right = 555.0
offset_bottom = 620.0

[node name="VBoxContainer" type="VBoxContainer" parent="CropsMenu"]
custom_minimum_size = Vector2(530, 0)
layout_mode = 2

[node name="Wheat" type="CenterContainer" parent="CropsMenu/VBoxContainer"]
layout_mode = 2

[node name="WheatButton" type="TextureButton" parent="CropsMenu/VBoxContainer/Wheat"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
texture_normal = ExtResource("3_j73ll")
texture_pressed = ExtResource("4_go8a0")
ignore_texture_size = true
stretch_mode = 0

[node name="WheatProfit" type="Label" parent="CropsMenu/VBoxContainer/Wheat"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "
+1 Space Money"

[node name="WheatAuto" type="Control" parent="CropsMenu/VBoxContainer/Wheat"]
visible = false
layout_mode = 2

[node name="WheatAuto" type="Label" parent="CropsMenu/VBoxContainer/Wheat/WheatAuto"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
offset_left = 100.0
offset_top = -45.0
offset_right = 225.0
offset_bottom = 45.0
text = "1 Space Money per Second"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Carrot" type="CenterContainer" parent="CropsMenu/VBoxContainer"]
layout_mode = 2

[node name="CarrotButton" type="TextureButton" parent="CropsMenu/VBoxContainer/Carrot"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
disabled = true
texture_normal = ExtResource("5_qb76j")
texture_pressed = ExtResource("6_ahk0q")
texture_disabled = ExtResource("7_8fumg")
stretch_mode = 0

[node name="CarrotProfit" type="Label" parent="CropsMenu/VBoxContainer/Carrot"]
visible = false
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
text = "10 Space Money"

[node name="CarrotUnlock" type="Button" parent="CropsMenu/VBoxContainer/Carrot"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
text = "Unlock for 25 Space Money"

[node name="CarrotAuto" type="Control" parent="CropsMenu/VBoxContainer/Carrot"]
visible = false
layout_mode = 2

[node name="CarrotAuto" type="Label" parent="CropsMenu/VBoxContainer/Carrot/CarrotAuto"]
custom_minimum_size = Vector2(145, 90)
layout_mode = 0
offset_left = 100.0
offset_top = -45.0
offset_right = 200.0
offset_bottom = 45.0
text = "1 Space Money per Second"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Beet" type="CenterContainer" parent="CropsMenu/VBoxContainer"]
layout_mode = 2

[node name="BeetButton" type="TextureButton" parent="CropsMenu/VBoxContainer/Beet"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
disabled = true
texture_normal = ExtResource("8_ry3h1")
texture_pressed = ExtResource("9_eimd4")
texture_disabled = ExtResource("7_8fumg")
stretch_mode = 0

[node name="BeetProfit" type="Label" parent="CropsMenu/VBoxContainer/Beet"]
visible = false
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
text = "25 Space Money"

[node name="BeetUnlock" type="Button" parent="CropsMenu/VBoxContainer/Beet"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
text = "Unlock for 250 Space Money"

[node name="BeetAuto" type="Control" parent="CropsMenu/VBoxContainer/Beet"]
visible = false
layout_mode = 2

[node name="BeetAuto" type="Label" parent="CropsMenu/VBoxContainer/Beet/BeetAuto"]
custom_minimum_size = Vector2(145, 90)
layout_mode = 0
offset_left = 100.0
offset_top = -45.0
offset_right = 200.0
offset_bottom = 45.0
text = "1 Space Money per Second"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Potato" type="CenterContainer" parent="CropsMenu/VBoxContainer"]
layout_mode = 2

[node name="PotatoButton" type="TextureButton" parent="CropsMenu/VBoxContainer/Potato"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
disabled = true
texture_normal = ExtResource("8_ry3h1")
texture_pressed = ExtResource("9_eimd4")
texture_disabled = ExtResource("7_8fumg")
stretch_mode = 0

[node name="PotatoProfit" type="Label" parent="CropsMenu/VBoxContainer/Potato"]
visible = false
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
text = "250 Space Money"

[node name="PotatoUnlock" type="Button" parent="CropsMenu/VBoxContainer/Potato"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
text = "Unlock for 2500 Space Money"

[node name="PotatoAuto" type="Control" parent="CropsMenu/VBoxContainer/Potato"]
visible = false
layout_mode = 2

[node name="PotatoAuto" type="Label" parent="CropsMenu/VBoxContainer/Potato/PotatoAuto"]
custom_minimum_size = Vector2(145, 90)
layout_mode = 0
offset_left = 100.0
offset_top = -45.0
offset_right = 200.0
offset_bottom = 45.0
text = "1 Space Money per Second"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Upgradesbg" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 600.0
offset_top = 65.0
offset_right = 1130.0
offset_bottom = 630.0
color = Color(0.141176, 0.156863, 0.243137, 0.756863)

[node name="Upgrades" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 600.0
offset_top = 65.0
offset_right = 1130.0
offset_bottom = 125.0

[node name="Label" type="Label" parent="Upgrades"]
custom_minimum_size = Vector2(530, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Upgrades"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AIUpgradesMenu" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 885.0
offset_top = 120.0
offset_right = 1110.0
offset_bottom = 620.0

[node name="VBoxContainer" type="VBoxContainer" parent="AIUpgradesMenu"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="WheatAuto" type="Control" parent="AIUpgradesMenu/VBoxContainer"]
custom_minimum_size = Vector2(200, 90)
layout_mode = 2

[node name="WheatAIAuto" type="Button" parent="AIUpgradesMenu/VBoxContainer/WheatAuto"]
layout_mode = 2
offset_right = 200.0
offset_bottom = 90.0
text = "Unlock Wheat AI
30 Space Money"
autowrap_mode = 2

[node name="WheatTimer" type="Timer" parent="AIUpgradesMenu/VBoxContainer/WheatAuto"]

[node name="CarrotAuto" type="Control" parent="AIUpgradesMenu/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(200, 90)
layout_mode = 2

[node name="CarrotAIAuto" type="Button" parent="AIUpgradesMenu/VBoxContainer/CarrotAuto"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 90.0
text = "Unlock Carrot AI
150 Space Money"
autowrap_mode = 2

[node name="CarrotTimer" type="Timer" parent="AIUpgradesMenu/VBoxContainer/CarrotAuto"]

[node name="BeetAuto" type="Control" parent="AIUpgradesMenu/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(200, 90)
layout_mode = 2

[node name="BeetAIAuto" type="Button" parent="AIUpgradesMenu/VBoxContainer/BeetAuto"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 90.0
text = "Unlock Beet AI
450 Space Money"
autowrap_mode = 2

[node name="BeetTimer" type="Timer" parent="AIUpgradesMenu/VBoxContainer/BeetAuto"]

[node name="PotatoAuto" type="Control" parent="AIUpgradesMenu/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(200, 90)
layout_mode = 2

[node name="PotatoAIAuto" type="Button" parent="AIUpgradesMenu/VBoxContainer/PotatoAuto"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 90.0
text = "Unlock Potato AI
4000 Space Money"
autowrap_mode = 2

[node name="PotatoTimer" type="Timer" parent="AIUpgradesMenu/VBoxContainer/PotatoAuto"]

[node name="ButtonUpgradesMenu" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 620.0
offset_top = 120.0
offset_right = 845.0
offset_bottom = 620.0

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonUpgradesMenu"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="WheatUpgrade" type="Control" parent="ButtonUpgradesMenu/VBoxContainer"]
custom_minimum_size = Vector2(200, 90)
layout_mode = 2

[node name="WheatUpgrade" type="Button" parent="ButtonUpgradesMenu/VBoxContainer/WheatUpgrade"]
layout_mode = 2
offset_right = 200.0
offset_bottom = 90.0
text = "Upgrade Wheat Price by x1.5
30 Space Money"
autowrap_mode = 2

[node name="CarrotUpgrade" type="Control" parent="ButtonUpgradesMenu/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(200, 90)
layout_mode = 2

[node name="CarrotUpgrade" type="Button" parent="ButtonUpgradesMenu/VBoxContainer/CarrotUpgrade"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 90.0
text = "Upgrade Carrot Price by x1.5
150 Space Money"
autowrap_mode = 2

[node name="BeetUpgrade" type="Control" parent="ButtonUpgradesMenu/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(200, 90)
layout_mode = 2

[node name="BeetUpgrade" type="Button" parent="ButtonUpgradesMenu/VBoxContainer/BeetUpgrade"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 90.0
text = "Upgrade Beeet Price by x1.5
450 Space Money"
autowrap_mode = 2

[node name="PotatoUpgrade" type="Control" parent="ButtonUpgradesMenu/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(200, 90)
layout_mode = 2

[node name="PotatoUpgrade" type="Button" parent="ButtonUpgradesMenu/VBoxContainer/PotatoUpgrade"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 90.0
text = "Upgrade Potato Price by x1.5
4000 Space Money"
autowrap_mode = 2

[node name="Counter" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = 1.0
offset_bottom = 55.0
grow_horizontal = 2
script = ExtResource("3_uxv5b")

[node name="SpaceMoneyLable" type="Label" parent="Counter"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0 Space Money"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="profit_changed" from="." to="Counter" method="_on_game_profit_changed"]
[connection signal="button_down" from="CropsMenu/VBoxContainer/Wheat/WheatButton" to="." method="_on_wheat_button_button_down"]
[connection signal="button_down" from="CropsMenu/VBoxContainer/Carrot/CarrotButton" to="." method="_on_carrot_button_button_down"]
[connection signal="pressed" from="CropsMenu/VBoxContainer/Carrot/CarrotUnlock" to="." method="_on_carrot_unlock_pressed"]
[connection signal="button_down" from="CropsMenu/VBoxContainer/Beet/BeetButton" to="." method="_on_beet_button_button_down"]
[connection signal="pressed" from="CropsMenu/VBoxContainer/Beet/BeetUnlock" to="." method="_on_beet_unlock_pressed"]
[connection signal="button_down" from="CropsMenu/VBoxContainer/Potato/PotatoButton" to="." method="_on_potato_button_button_down"]
[connection signal="pressed" from="CropsMenu/VBoxContainer/Potato/PotatoUnlock" to="." method="_on_potato_unlock_pressed"]
[connection signal="pressed" from="AIUpgradesMenu/VBoxContainer/WheatAuto/WheatAIAuto" to="." method="_on_wheat_ai_auto_pressed"]
[connection signal="timeout" from="AIUpgradesMenu/VBoxContainer/WheatAuto/WheatTimer" to="." method="_on_wheat_timer_timeout"]
[connection signal="pressed" from="AIUpgradesMenu/VBoxContainer/CarrotAuto/CarrotAIAuto" to="." method="_on_carrot_ai_auto_pressed"]
[connection signal="timeout" from="AIUpgradesMenu/VBoxContainer/CarrotAuto/CarrotTimer" to="." method="_on_carrot_timer_timeout"]
[connection signal="pressed" from="AIUpgradesMenu/VBoxContainer/BeetAuto/BeetAIAuto" to="." method="_on_beet_ai_auto_pressed"]
[connection signal="timeout" from="AIUpgradesMenu/VBoxContainer/BeetAuto/BeetTimer" to="." method="_on_beet_timer_timeout"]
[connection signal="pressed" from="AIUpgradesMenu/VBoxContainer/PotatoAuto/PotatoAIAuto" to="." method="_on_potato_ai_auto_pressed"]
[connection signal="timeout" from="AIUpgradesMenu/VBoxContainer/PotatoAuto/PotatoTimer" to="." method="_on_potato_timer_timeout"]
[connection signal="pressed" from="ButtonUpgradesMenu/VBoxContainer/WheatUpgrade/WheatUpgrade" to="." method="_on_wheat_upgrade_pressed"]
[connection signal="pressed" from="ButtonUpgradesMenu/VBoxContainer/CarrotUpgrade/CarrotUpgrade" to="." method="_on_carrot_upgrade_pressed"]
[connection signal="pressed" from="ButtonUpgradesMenu/VBoxContainer/BeetUpgrade/BeetUpgrade" to="." method="_on_beet_upgrade_pressed"]
[connection signal="pressed" from="ButtonUpgradesMenu/VBoxContainer/PotatoUpgrade/PotatoUpgrade" to="." method="_on_potato_upgrade_pressed"]
